--- a/Translator.html
+++ b/Translator.html
@@ -6,8 +6,26 @@
 
   </head>
   <body>
+<textarea id="translate" rows="1" cols ="20">Translate from english</textarea>
+
+	<button onclick="translateThis(this)">Translate</button>
+
+<b id="demo">
+<input type="alert" />
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title></title>
+    <script src="Translator.js" type="text/javascript"></script>
+
+  </head>
+  <body>
 <textarea id="translate" rows="1" cols ="20">Input what to translate</textarea>
 
 	<button onclick="translateThis()">Translate</button>
   </body>
 </html>
+ -->
