--- a/FProj_RachelEdits.html
+++ b/FProj_RachelEdits.html
@@ -159,7 +159,7 @@
     </div>
 
     <div id="Translator" class="tabcontent">
-    <div class="example1" class="header">
+    <div class="header">
       <h1>Translator</h1>
     </div>
     <textarea id="translate" rows="1" cols ="20">Translate from english</textarea>
