--- a/FProj_RachelEdits.html
+++ b/FProj_RachelEdits.html
@@ -7,6 +7,10 @@
 
   <script src="FProj_RachelEdits.js" type="text/javascript"></script>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+
   <meta charset="utf-8">
   <title>Languapedia</title>
 </head>
@@ -25,8 +29,6 @@
   <button class="tablink" onclick="openPage('Food', this)">Food</button>
   <button class="tablink" onclick="openPage('Conversation', this)">Conversation</button>
   <button class="tablink" onclick="openPage('Translator', this)">Translator</button>
-
-
 
 
   <div id="Home" class="tabcontent">
@@ -140,6 +142,7 @@
           <p id="ni">Sentence:<br>Tā hěn měilì<br>她<strong>很</strong>美丽。<br>She is very beautiful.</p>
           <p id="wo">Sentence:<br>Wǒ bùyào qù xuéxiào.<br>我<strong>不</strong>要去学校<br>I do not want to go to school.</p>
         </div>
+
       </div>
 
       <div class="row">
@@ -155,6 +158,68 @@
           <p class="column4">5. <br>Wǒ tīng bù dǒng<br>我听不懂<br>I don't understand</p>
           <p class="column4">6. <br>hǎo de<br>好的<br>Okay/good</p>
         </div>
+      </div>
+
+      <!-- Quiz part -->
+
+      <div class="question">
+        <p>1. What is "I don't understand" in Mandarin?</p>
+        <label>
+          <input type="radio" name="answers[1]" value="A">
+          我五岁了
+        </label>
+
+        <label>
+          <input type="radio" name="answers[1]" value="B" data-correct>
+          我不知道
+        </label>
+
+        <label>
+          <input type="radio" name="answers[1]" value="C">
+          我听不懂
+        </label>
+      </div>
+
+      <div class="question">
+        <p>2. What is "I" in Mandarin</p>
+        <label>
+          <input type="radio" name="answers[2]" value="A">
+          我
+        </label>
+
+        <label>
+          <input type="radio" name="answers[2]" value="B" data-correct>
+          你
+        </label>
+
+        <label>
+          <input type="radio" name="answers[2]" value="C">
+          不
+          </label>
+      </div>
+
+      <div class="question">
+        <p>3. What is "I'm sorry" in Mandarin?</p>
+        <label>
+          <input type="radio" name="answers[3]" value="A">
+          对不起
+        </label>
+
+        <label>
+          <input type="radio" name="answers[3]" value="B" data-correct>
+          谢谢
+        </label>
+
+        <label>
+          <input type="radio" name="answers[3]" value="C">
+          你好
+          </label>
+      </div>
+
+      <button id="quiz-submit">Submit</button>
+
+      <div>
+        Score: <span id="score">0</span>
       </div>
     </div>
 
