--- a/FProj_RachelEdits.html
+++ b/FProj_RachelEdits.html
@@ -189,6 +189,9 @@ hdgsfgdrfghnt
           <p class="column4">6. <br>hǎo de<br>好的<br>Okay/good</p>
         </div>
       </div>
+      <div id="quiz"></div>
+      <button id="sumbit">Submit Quiz</button>
+      <div id="results"></div>
     </div>
 
 <div id="Tourist" class="tabcontent" class="parallax">
